<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!--コメント記述用-->
    <!--左側の表示用のやつ-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayoutFirstBlock">

        <LinearLayout
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:id="@+id/LinearLayoutTextDateTitle">

            <TextView
                android:id="@+id/textViewTextPrimNum"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#a22e8a"
                android:textColor="#f3c800"
                android:gravity="center_horizontal"
                android:text="@string/string_primNum"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewTextDate"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#c1c4cd"
                android:textColor="#2c242a"
                android:gravity="center_horizontal"
                android:text="@string/string_date"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewTextTitle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="30"
                android:background="#7a4e9a"
                android:textColor="#f2d3a1"
                android:gravity="center_horizontal"
                android:text="@string/string_items"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewQuestionNumber"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#bb9861"
                android:textColor="#a22e8a"
                android:gravity="center_horizontal"
                android:text="@string/string_spendMoney"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/LinearLayoutEditDateTitle">

            <EditText
                android:id="@+id/editTextPrimNum"
                android:hint="@string/string_printPlease"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="18sp" />

            <!--元がTextViewなのでほかのやつと設定が違う-->
            <EditText
                android:id="@+id/editTextDatePrint"
                android:hint="@string/string_current"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextInputTitle"
                android:hint="@string/string_printPlease"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editTextInputQuestion"
                android:hint="@string/string_printPlease"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayoutThirdBlock">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClickQuery"
                android:text="@string/string_printQuery" />

            <ListView
                android:id="@+id/findList"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:choiceMode="singleChoice" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutStartEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--操作ボタンを縦に列挙-->
            <Button
                android:id="@+id/buttonAppEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClickReserve"
                android:text="@string/string_printReserve2" />

            <Button
                android:id="@+id/buttonReservePdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonClickDelete"
                android:text="@string/string_printDelete" />

        </LinearLayout>

        <!--検索条件のウィジェット-->

        <LinearLayout
            android:id="@+id/LinearLayoutAnswerTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/printPrimNum"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/string_primNum" />

            <EditText
                android:id="@+id/printTimeText"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/string_date" />

            <EditText
                android:id="@+id/printItems"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="@string/string_items" />

            <EditText
                android:id="@+id/printMoney"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="@string/string_spendMoney" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>